* Button size and Overlapping issue fixed. * Pagination style and arguments added. * Responsive issue fixed

--- a/css/blue.css
+++ b/css/blue.css
@@ -420,6 +420,10 @@ nav .primary-nav .children .children:after{
 	background-color: #FFF;
 }
 
+.woocommerce-cart ul.products li.product {
+	background-color: transparent;
+}	
+
 .woocommerce div.product form.cart .variations select {
 	background-color: #FFF;
 }
@@ -452,7 +456,7 @@ nav .primary-nav .children .children:after{
 	background-color: #3f70d4;
 }
 .woocommerce button.button.alt:hover, .woocommerce a.button.alt:hover, .woocommerce input.button.alt:hover {
-	background-color: #3f70d4;
+	background-color: #363a42;
 }
 
 
@@ -473,6 +477,13 @@ nav .primary-nav .children .children:after{
 
 .woocommerce .quantity input {
     background: #FFF;
+}
+
+.woocommerce button.button.alt.disabled {
+	background-color: #3f70d4;
+}
+.woocommerce button.button.alt.disabled:hover {
+	background-color: #3f70d4;
 }
 
 
